# baxter_demos

./: CMakeLists.txt  Mistreatment Instructions.odt  Mistreatment Item List.odt  baxter_mistreatmentScript.py  package.xml  wizard.py
scripts/: CubeDetection.py  IK_Service_Client_test.py  baxter_image.py  baxter_mistreatmentScript.py  baxter_mistreatmentScript.py~  baxter_selfie.py  baxter_tearWipe.py  baxter_tearWipe_old.py  baxter_wave.py  macarena.py  moveitTest.py  rock-paper-scissors.py  rubiks_solver.py  wizard.py
